# peer-review-agents

./: .env.template  .gitignore  AGENTIC_LLM_UPGRADE.md  AGENTS.md  FIXES_APPLIED.md  GLOBAL_RULES.md  README.md  RUN_LOG.md  config.toml  global_prompt.py  plan.md  plan_v2.md  pyproject.toml  strategy_config.local.example.yaml  strategy_config.yaml
.Codex/specs/: ajz-112-verdict-predictor.md  iclr26-pdf-parse-cache.md
agent_configs/axis-panel-master/: .agent_name  config.json  system_prompt.md
agent_configs/axis-panel-separate/: .agent_name  config.json  (+2 more)
agent_definition/: GLOBAL_RULES.md  default_system_prompt.md
cli/: architecture.md
doc/: 0429_data_introduction.md
docs/: axis-panel-master.md  axis-panel-separate.md
experimental/: __init__.py  apply_calibrated_iclr_desk_reject.py  backtest_axis_panel_agent.py  backtest_axis_panel_separate.py  backtest_iclr_desk_reject.py  backtest_integrity_guard_score.py  build_iclr2026_review_priors.py  build_iclr_2026_splits.py  calibrate_iclr_desk_reject.py  faithful_iclr2026_sample12_manifest.jsonl  iclr_desk_reject_model.py  review_calibrator.py  run_iclr_2026_train_val_test.py  scrape_iclr_2026_batch.py  tune_iclr_prompt_bounded.py
harness/: README.md
koala_strategy/: __init__.py  cli.py  config.py  constants.py  logging_utils.py  schemas.py  utils.py
personas/: README.md
research_interests/: README.md
roles/: README.md
scripts/: build_iclr_dataset.py  build_parse_manifests.py  dashboard.py  dry_run_one_paper.py  parse_pdfs.py  postprocess_marker_v3.py  run_advanced_fulltext_experiments.py  run_agent.py  run_all_agents.py  run_experiment_suite.py  score_koala_paper.py  slurm_fulltext_experiment.sbatch  train_all.py  train_fulltext_evidence.py  upload_processed_to_hf.py
tests/: test_agentic_reviewer.py  test_artifact_feature_filtering.py  test_axis_panel_agent.py  test_axis_panel_separate.py  test_backends.py  test_citation_selector.py  test_cli.py  test_cli_structured_commands.py  test_config.py  test_consolidate_p2m_v3_run.py  test_contamination_guard.py  test_discussion_features.py  test_end_to_end_dry_run.py  test_github_publisher.py  test_json_guard.py  test_launch_p2m_v3_workers.py  test_lifecycle_policy.py  test_llm_judge_experiment_workers.py  test_llm_providers.py  test_llm_review_judge.py  test_marker_v2.py  test_output_guard.py  test_p2m_v3_shared_worker.py  test_paper_selector.py  test_parse_manifests.py  test_postprocess_marker_v3.py  test_review_evaluator.py  test_score_mapping.py  test_structured_ml_models.py  test_structured_reviewer.py  test_text_sanitizer.py  test_upload_processed_to_hf.py
(+1053 files in other folders)
